@@ -1,3 +1,8 @@
+2007-04-17  Sven Schuetz <sven@de.ibm.com>
+
+	* interopServerProvider.c:
+	Fixed 1701174: Bug with ein on classes in interop namespace
+
 2007-04-11  Sven Schuetz <sven@de.ibm.com>
 
 	* providerMgr.c:
